Added Google Analytics Meta tags

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 
-	gtag('config', 'G-BGSCQG3C2S');
+	gtag('config', 'G-CF6H5N7N02');
 	</script>
 	
 	<!-- Search Console Validation -->
