--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 	
 
-    <title>La chouette agence</title>
+    <title>La chouette agence - Entreprise de Webdesign à Lyon</title>
 
     
 	<!-- Analytics -->
