--- a/page2.html
+++ b/page2.html
@@ -18,12 +18,24 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>page2</title>
+    <title>Contactez nous - La Chouette Agence</title>
 
     
-<!-- Analytics -->
- 
-<!-- Analytics END -->
+	<!-- Analytics -->
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-BGSCQG3C2S"></script>
+	<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-CF6H5N7N02');
+	</script>
+	
+	<!-- Search Console Validation -->
+	<meta name="google-site-verification" content="vYrtSGCe31NIFVa64CHP50HVrEMsfzsFNHKyQvnLWdw" />
+	
+	<!-- Analytics END -->
     
 </head>
 <body>
