--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>La Chouette Agence | Entreprise de Web design à Lyon</title>
 	<meta name="description" content="Entreprise de web design situé a Lyon, conception ou refonte de votre site web, La chouette agence apporte son expertise aux entreprises et vous accompagne dans votre stratégie de création graphique de site web.">
     <!-- changement du favicon en png -->
-    <link rel="shortcut icon"  href="./fav-icon.png">
+    <link rel="shortcut icon" type="image/png" href="./fav-icon.png">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
@@ -68,8 +68,8 @@
 							</li>
 							<!-- supression list-item vide -->
 							<li>
-								<!-- renommer page contact -->
-								<a href="contact.html">Contactez-nous &gt;</a>
+								<!-- renommer page contact / supression charactere unicode-->
+								<a href="contact.html">Nous Contacter</a>
 							</li>
 						</ul>
 					</div>
@@ -85,7 +85,7 @@
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
 						<h1 class="text-center hero-bloc-text tc-white ">
-							La chouette agence.
+							La chouette agence
 						</h1>
 						<div class="text-center">
 							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
