--- a/contact.html
+++ b/contact.html
@@ -62,11 +62,7 @@
 							<li>
 								<a href="index.html">Accueil</a>
 							</li>
-							<li>
-							</li>
-							<li>
-								<a href="page2.html">page2 &gt;</a>
-							</li>
+							<!-- removed empty list item and link to page-2 -->
 						</ul>
 					</div>
 				</nav>
