--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jqBootstrapValidation.min.js"></script>
-	<script src="./js/formHandler.min.js"></script>
+	<script defer src="./js/jquery-2.1.0.min.js"></script>
+	<script defer src="./js/bootstrap.min.js"></script>
+	<script defer src="./js/blocs.min.js"></script>
+	<script defer src="./js/jqBootstrapValidation.min.js"></script>
+	<script defer src="./js/formHandler.min.js"></script>
 
 	<!-- Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
