--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
     
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jquery.touchSwipe.min.js" defer></script>
-	<script src="./js/gmaps.min.js"></script>
+	<script defer src="./js/jquery-2.1.0.min.js"></script>
+	<script defer src="./js/bootstrap.min.js"></script>
+	<script defer src="./js/blocs.min.js"></script>
+	<script defer src="./js/jquery.touchSwipe.min.js" defer></script>
+	<script defer src="./js/gmaps.min.js"></script>
     
 	<!-- Analytics -->
 	<!-- Global site tag (gtag.js) - Google Analytics -->
