--- a/contact.html
+++ b/contact.html
@@ -94,8 +94,10 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-6">
-						<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+						<!-- deleted success-msg and fail-msg invalid attribute -->
+						<form id="form_1" novalidate>
 							<div class="form-group">
+								<!-- added matching id/label pair -->
 								<label for="name">
 									Nom
 								</label>
@@ -112,7 +114,8 @@
 									Comment nous avez-vous connu ?
 								</label>
 								<!-- changement du type bef=email aft=text -->
-								<input id="from" class="form-control" type="text" required id="input_504" />
+								<!-- deleted id=504 -->
+								<input id="from" class="form-control" type="text" required/>
 							</div>
 							<div class="form-group">
 								<label for="message">
