--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <!-- langue fr -->
 <html lang="fr-fr">
 	
@@ -7,16 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
    
 	<!-- supression balise meta keywords -->
-    
+
 	<!-- titre et description avec mots clefs -->
     <title>La Chouette Agence | Entreprise de Web design à Lyon</title>
 	<meta name="description" content="Entreprise de web design situé a Lyon, conception ou refonte de votre site web, La chouette agence apporte son expertise aux entreprises et vous accompagne dans votre stratégie de création graphique de site web.">
-    <!-- changement du favicon en png -->
-    <link rel="shortcut icon" type="image/png" href="./fav-icon.png">
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+    
+	<!-- changement du favicon en png -->
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
 	<!-- Added defer attribute -->
 	<script defer src="./js/jquery-2.1.0.min.js"></script>
