--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>La Chouette Agence | Entreprise de Web design à Lyon</title>
 	<meta name="description" content="Entreprise de web design situé a Lyon, conception ou refonte de votre site web, La chouette agence apporte son expertise aux entreprises et vous accompagne dans votre stratégie de création graphique de site web.">
     
+	<link rel="canonical" href="https://Docstone.github.io/la-chouette-agence/index.html" />
 	<!-- changement du favicon en png -->
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
