--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <!-- supression balise meta keywords -->
 	
     
-    <link rel="shortcut icon" type="image/png" href="fav-icon.png">
+    <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
@@ -61,7 +61,7 @@
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a href="index.html">Accueil</a>
+								<a class="nav-link" href="index.html">Accueil</a>
 							</li>
 							<!-- removed empty list item and link to page-2 -->
 						</ul>
@@ -72,14 +72,14 @@
 		<!-- bloc-0 END -->
 
 		<!-- bloc-6 -->
-		<div class="bloc bg-dots-bg texture-paper bg-repeat bgc-atomic-tangerine d-bloc bloc-bg-texture" id="bloc-6">
+		<div class="bloc bg-dots-bg texture-paper bg-banniere d-bloc bloc-bg-texture" id="bloc-6">
 			<div class="container bloc-lg">
 				<div class="row">
-					<div class="col-sm-12">
-						<h1 class="text-center hero-bloc-text tc-white">
+					<div class="col-sm-12 bg-contrast-black">
+						<h1 class="text-center hero-bloc-text tc-white text-contrast">
 							Parlons web design !
 						</h1>
-						<p class="text-center mg-lg tc-white tight-width-whitespace">
+						<p class="text-center mg-lg tc-white tight-width-whitespace text-contrast">
 							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.<br>
 							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 						</p>
@@ -98,19 +98,19 @@
 						<form id="form_1" novalidate>
 							<div class="form-group">
 								<!-- added matching id/label pair -->
-								<label for="name">
+								<label for="name" class="form-label">
 									Nom
 								</label>
 								<input id="name" class="form-control" required />
 							</div>
 							<div class="form-group">
-								<label for="email">
+								<label for="email" class="form-label">
 									Adresse email
 								</label>
 								<input id="email" class="form-control" type="email" required />
 							</div>
 							<div class="form-group">
-								<label for="from">
+								<label for="from" class="form-label">
 									Comment nous avez-vous connu ?
 								</label>
 								<!-- changement du type bef=email aft=text -->
@@ -118,7 +118,7 @@
 								<input id="from" class="form-control" type="text" required/>
 							</div>
 							<div class="form-group">
-								<label for="message">
+								<label for="message" class="form-label">
 									Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 								</label>
 								<textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
@@ -128,8 +128,8 @@
 							</button>
 						</form>
 					</div>
-					<div class="col-sm-6">
-						<p class="adress-info">
+					<div class="col-sm-6 adress-info">
+						<p class="text-contrast">
 							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 						</p>
 					</div>
@@ -144,11 +144,11 @@
 
 
 		<!-- Footer - bloc-8 -->
-		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
-			<div class="container bloc-sm">
+		<div class="bloc  bgc-black d-bloc" id="bloc-8">
+			<div class="container bloc-sm ">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<p class="text-center white text-contrast">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 						<div class="row row-no-gutters social">
@@ -169,7 +169,7 @@
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Instagram" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md"></span></a>
+									<a class="social" title="Instagram" href="https://www.instagram.com/"><span class="fa fa-instagram icon-md "></span></a>
 								</div>
 							</div>
 						</div>
