--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 	<!-- changement du favicon en png -->
     <link rel="shortcut icon" type="image/png" href="./img/favicon.png">
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	
 	<!-- Added defer attribute -->
 	<script defer src="./js/jquery-2.1.0.min.js"></script>
@@ -66,12 +66,12 @@
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
 							<li>
-								<a href="index.html">Accueil</a>
+								<a class="nav-link" href="index.html">Accueil</a>
 							</li>
 							<!-- supression list-item vide -->
 							<li>
 								<!-- renommer page contact / supression charactere unicode-->
-								<a href="contact.html">Nous Contacter</a>
+								<a class="nav-link" href="contact.html">Nous Contacter</a>
 							</li>
 						</ul>
 					</div>
@@ -84,9 +84,9 @@
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace">
-					<div class="col-sm-12">
+					<div class="col-sm-12 bg-contrast rounded">
 						<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="Logo La chouette agence"/>
-						<h1 class="text-center hero-bloc-text tc-white ">
+						<h1 class="text-center hero-bloc-text tc-white">
 							La chouette agence
 						</h1>
 						<div class="text-center">
@@ -162,12 +162,12 @@
 		<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
-					<div class="col-sm-12">
+					<div class="col-sm-12 bg-contrast">
 						<h2 class="mg-md text-center tc-white">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 						</h2>
 						<p class="text-center white">
-							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu'elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d'une identité visuelle complète ou d'une refonte de votre site, n'hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br> <a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a>
+							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu'elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d'une identité visuelle complète ou d'une refonte de votre site, n'hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br> <a class="ltc-white bold-link link-contrast" href="contact.html">Contactez notre équipe</a>
 						</p>
 					</div>
 				</div>
@@ -230,7 +230,7 @@
 		<!-- bloc-5-cta -->
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
-				<div class="row">
+				<div class="row bg-contrast rounded">
 					<h2 class="mg-md text-center tc-white">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
@@ -242,12 +242,16 @@
 		</div>
 		<!-- bloc-5-cta END -->
 
+		<!-- ScrollToTop Button -->
+		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+		<!-- ScrollToTop Button END-->
+		
 		<!-- Footer - bloc-8 -->
-		<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+		<div class="bloc bgc-black d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
 				<div class="row">
 					<div class="col-sm-12">
-						<p class="text-center white">
+						<p class="text-center white text-contrast">
 							La chouette agence - Agence web basée à Lyon.<br>
 						</p>
 						<div class="row row-no-gutters social">
@@ -258,7 +262,7 @@
 							</div>
 							<div class="col-sm-3">
 								<div class="text-center">
-									<a class="social" title="Facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
+									<a  class="social" title="Facebook" href="https://www.facebook.com/"><span class="fa fa-facebook icon-md"></span></a>
 								</div>
 							</div>
 							<div class="col-sm-3">
