--- a/contact.html
+++ b/contact.html
@@ -128,8 +128,8 @@
 							</button>
 						</form>
 					</div>
-					<div class="col-sm-6 adress-info">
-						<p class="text-contrast">
+					<div class="col-sm-6 adress-container">
+						<p class="adress-text">
 							contact@lachouetteagence.com<br>2 place Sathonay 69001 Lyon<br>Ouvert de 9h à 18h, du lundi au vendredi<br>
 						</p>
 					</div>
