--- a/index.html
+++ b/index.html
@@ -162,12 +162,13 @@
 		<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 			<div class="container bloc-lg">
 				<div class="row tight-width-whitespace black-background">
-					<div class="col-sm-12 bg-contrast">
-						<h2 class="mg-md text-center tc-white">
+					<div class="col-sm-12 bgc-black">
+						<h2 class="mg-md text-center tc-white text-contrast">
 							Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
 						</h2>
 						<p class="text-center white">
-							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu'elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d'une identité visuelle complète ou d'une refonte de votre site, n'hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br> <a class="ltc-white bold-link link-contrast" href="contact.html">Contactez notre équipe</a>
+							Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu'elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d'une identité visuelle complète ou d'une refonte de votre site, n'hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br>
+							 <a class="link-contrast" href="contact.html">Contactez notre équipe</a>
 						</p>
 					</div>
 				</div>
@@ -230,8 +231,8 @@
 		<!-- bloc-5-cta -->
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
-				<div class="row bg-contrast rounded">
-					<h2 class="mg-md text-center tc-white">
+				<div class="row bg-contrast rounded bot-container">
+					<h2 class="text-center tc-white font-700">
 						Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 					</h2>
 					<div class="col-sm-12 text-center">
@@ -245,7 +246,7 @@
 		<!-- ScrollToTop Button -->
 		<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
 		<!-- ScrollToTop Button END-->
-		
+
 		<!-- Footer - bloc-8 -->
 		<div class="bloc bgc-black d-bloc" id="bloc-8">
 			<div class="container bloc-sm">
