--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
-					<div class="col-sm-6">
+					<div class="col-sm-6 pad-bot">
 						<a href="#" data-lightbox="img/1-LG.jpg" class="focused" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Refonte d'un site web pour journal" class="img-responsive portfolio-thumb" /></a>
 						<h3 class="mg-tp text-center">
 							Refonte d'un site web pour un journal local
@@ -194,7 +194,7 @@
 							Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 						</p>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm-6 pad-bot">
 						<a href="#" data-lightbox="img/2-LG.jpg" class="focused" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour photographes" /></a>
 						<h3 class="mg-tp text-center">
 							Création d'un site web pour photographes
@@ -205,7 +205,7 @@
 					</div>
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
-					<div class="col-sm-6">
+					<div class="col-sm-6 pad-bot">
 						<a href="#" data-lightbox="img/3-LG.jpg" class="focused" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour voyageur"/></a>
 						<h3 class="mg-tp text-center">
 							Création d'un site internet pour un voyageur
@@ -214,7 +214,7 @@
 							Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 						</p>
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm-6 pad-bot">
 						<a href="#" data-lightbox="img/4-LG.jpg" class="focused"	data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpg" class="img-responsive portfolio-thumb" alt="Création d'un site web pour agence de mariage" /></a>
 						<h3 class="mg-tp text-center">
 							Conception d'un site pour une agence de mariage
