--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<div class="col-sm-12">
 						<img src="img/logo.png" class="logo center-block image-resize-mode" width="100" alt="Logo La chouette agence"/>
 						<div class="bgc-title title-container">
-							<h1 class="text-center text-contrast">La chouette agence<h1>
+							<h1 class="text-center text-contrast">La chouette agence</h1>
 						</div>
 						<div class="text-center">
 							<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
